# libpgc

./: .gitignore  Makefile  Makefile.am  README.md  configure  configure.ac
doc/: xgc.odt
include/xgc/: array.h  list.h  stack.h  xgc.h
src/: Makefile  Makefile.am  array.c  list.c  stack.c  xgc.c
test/: Makefile  run_test  test_array.c  test_list.c
